--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-10 Sat 12:37]
+#+CAPTION: Clock summary at [2016-12-10 Sat 12:49]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *58:51* |       |       | 100.0 |
+| *Total time*                                                                | *59:01* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 58:51   |       |       | 100.0 |
-| Active                                                                      |         | 58:51 |       | 100.0 |
+| Stories                                                                     | 59:01   |       |       | 100.0 |
+| Active                                                                      |         | 59:01 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.8 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   0.9 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.8 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.0 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.4 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.3 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.1 |
 | COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   9.0 |
 | COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.7 |
@@ -38,11 +38,12 @@
 | COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.3 |
 | COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  10.3 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
-| COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   2.0 |
+| COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.9 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
 | COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.8 |
 | COMPLETED Models should have an associated language                         |         |       |  2:57 |   5.0 |
-| STARTED Add support for properties in C#                                    |         |       |  1:51 |   3.1 |
+| COMPLETED Add support for properties in C#                                  |         |       |  1:51 |   3.1 |
+| POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.1 |
 | STARTED Add support for Decimal numbers in c++                              |         |       |  0:32 |   0.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -576,7 +577,8 @@ A first step for this would be to have a language enumeration in yarn
 which is a property of the model, and one entry of which is "language
 agnostic".
 
-*** STARTED Add support for properties in C#                          :story:
+*** COMPLETED Add support for properties in C#                        :story:
+    CLOSED: [2016-12-10 Sat 12:38]
     CLOCK: [2016-12-10 Sat 12:35]--[2016-12-10 Sat 12:37] =>  0:02
     CLOCK: [2016-12-10 Sat 12:26]--[2016-12-10 Sat 12:34] =>  0:08
     CLOCK: [2016-12-10 Sat 11:40]--[2016-12-10 Sat 12:25] =>  0:45
@@ -585,6 +587,16 @@ agnostic".
 
 We need to go through yarn and populate the properties in the types
 facet.
+
+*** POSTPONED Use an unordered map in qualified name                  :story:
+    CLOSED: [2016-12-10 Sat 12:49]
+    CLOCK: [2016-12-10 Sat 12:38]--[2016-12-10 Sat 12:48] =>  0:10
+
+For some reason we are using a map, but its not clear that we need
+sorting. Change it to unordered and see what breaks.
+
+It seems we get errors in serialisation when using the map. Create a
+patch and investigate this later.
 
 *** STARTED Language namespaces and modeling element locations        :story:
     CLOCK: [2016-12-09 Fri 10:19]--[2016-12-09 Fri 10:27] =>  0:08
@@ -654,11 +666,6 @@ Tasks:
 
 - try using ICU DecNumber library.
 - check compiler support (MSVC may have decimals; if so, use that instead)
-
-*** Use an unordered map in qualified name                            :story:
-
-For some reason we are using a map, but its not clear that we need
-sorting. Change it to unordered and see what breaks.
 
 *** Add complete constructor for C# types                             :story:
 
