--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,38 +12,39 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-10 Sat 14:16]
+#+CAPTION: Clock summary at [2016-12-10 Sat 16:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *59:30* |       |       | 100.0 |
+| *Total time*                                                                | *60:33* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 59:30   |       |       | 100.0 |
-| Active                                                                      |         | 59:30 |       | 100.0 |
+| Stories                                                                     | 60:33   |       |       | 100.0 |
+| Active                                                                      |         | 60:33 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   4.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.7 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   0.9 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.8 |
-| COMPLETED Move project directory to output options                          |         |       |  1:10 |   2.0 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.3 |
+| COMPLETED Move project directory to output options                          |         |       |  1:10 |   1.9 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.2 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.1 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   8.9 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.6 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   8.7 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.5 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   2.0 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.6 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.2 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.7 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  28.6 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.3 |
-| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  10.2 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  28.1 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.2 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |  10.0 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
 | COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.9 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
 | COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.8 |
-| COMPLETED Models should have an associated language                         |         |       |  2:57 |   5.0 |
+| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.9 |
 | COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.9 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
+| STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.7 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.1 |
 | STARTED Add support for Decimal numbers in c++                              |         |       |  0:32 |   0.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -599,6 +600,12 @@ sorting. Change it to unordered and see what breaks.
 
 It seems we get errors in serialisation when using the map. Create a
 patch and investigate this later.
+
+*** STARTED Add support for test data generation in C#
+    CLOCK: [2016-12-10 Sat 15:30]--[2016-12-10 Sat 16:33] =>  1:03
+
+We need to create a facet that generates domain types. It should be
+idiomatic in C# - =IEnumerable=, etc.
 
 *** STARTED Language namespaces and modeling element locations        :story:
     CLOCK: [2016-12-09 Fri 10:19]--[2016-12-09 Fri 10:27] =>  0:08
