--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-10 Sat 17:51]
+#+CAPTION: Clock summary at [2016-12-10 Sat 17:57]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *61:49* |       |       | 100.0 |
+| *Total time*                                                                | *61:54* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 61:49   |       |       | 100.0 |
-| Active                                                                      |         | 61:49 |       | 100.0 |
+| Stories                                                                     | 61:54   |       |       | 100.0 |
+| Active                                                                      |         | 61:54 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   3.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.7 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -34,7 +34,7 @@
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.5 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.2 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.6 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  27.6 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  27.5 |
 | COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.2 |
 | COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.8 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
@@ -44,6 +44,7 @@
 | COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.8 |
 | COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.8 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
+| COMPLETED Add types with no properties and one property                     |         |       |  0:05 |   0.1 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.7 |
 | STARTED Add support for Equals in C#                                        |         |       |  1:16 |   2.0 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.1 |
@@ -602,7 +603,15 @@ sorting. Change it to unordered and see what breaks.
 It seems we get errors in serialisation when using the map. Create a
 patch and investigate this later.
 
-*** STARTED Add support for test data generation in C#
+*** COMPLETED Add types with no properties and one property           :story:
+    CLOSED: [2016-12-10 Sat 17:55]
+    CLOCK: [2016-12-10 Sat 17:51]--[2016-12-10 Sat 17:56] =>  0:05
+
+In order to make sure we're not hard-coding for the multiple
+properties scenario, create simple classes with no properties and one
+property.
+
+*** STARTED Add support for test data generation in C#                :story:
     CLOCK: [2016-12-10 Sat 15:30]--[2016-12-10 Sat 16:33] =>  1:03
 
 We need to create a facet that generates domain types. It should be
