--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-10 Sat 17:57]
+#+CAPTION: Clock summary at [2016-12-10 Sat 18:11]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *61:54* |       |       | 100.0 |
+| *Total time*                                                                | *62:08* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 61:54   |       |       | 100.0 |
-| Active                                                                      |         | 61:54 |       | 100.0 |
+| Stories                                                                     | 62:08   |       |       | 100.0 |
+| Active                                                                      |         | 62:08 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   3.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.7 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -29,25 +29,25 @@
 | COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.0 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.0 |
 | COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   8.5 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.3 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.2 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   1.9 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.5 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.2 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.6 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  27.5 |
-| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.2 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  27.4 |
+| COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.1 |
 | COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.8 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
 | COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.9 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
 | COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.8 |
-| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.8 |
+| COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.7 |
 | COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.8 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
 | COMPLETED Add types with no properties and one property                     |         |       |  0:05 |   0.1 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.7 |
-| STARTED Add support for Equals in C#                                        |         |       |  1:16 |   2.0 |
-| STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.1 |
+| STARTED Add support for Equals in C#                                        |         |       |  1:30 |   2.4 |
+| STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.0 |
 | STARTED Add support for Decimal numbers in c++                              |         |       |  0:32 |   0.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -618,6 +618,7 @@ We need to create a facet that generates domain types. It should be
 idiomatic in C# - =IEnumerable=, etc.
 
 *** STARTED Add support for Equals in C#                              :story:
+    CLOCK: [2016-12-10 Sat 17:57]--[2016-12-10 Sat 18:11] =>  0:14
     CLOCK: [2016-12-10 Sat 16:34]--[2016-12-10 Sat 17:50] =>  1:16
 
 We need some basic support for Equals and GetHashCode.
