--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,39 +12,40 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-10 Sat 18:11]
+#+CAPTION: Clock summary at [2016-12-10 Sat 20:55]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *62:08* |       |       | 100.0 |
+| *Total time*                                                                | *62:42* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 62:08   |       |       | 100.0 |
-| Active                                                                      |         | 62:08 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:24 |   3.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.7 |
+| Stories                                                                     | 62:42   |       |       | 100.0 |
+| Active                                                                      |         | 62:42 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.6 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
 | COMPLETED Test data generation for dates generates invalid dates            |         |       |  0:33 |   0.9 |
 | COMPLETED Handle missing stitch templates scenario                          |         |       |  1:04 |   1.7 |
 | COMPLETED Move project directory to output options                          |         |       |  1:10 |   1.9 |
-| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   7.0 |
+| COMPLETED Update the conceptual model to clarify backends and kernels       |         |       |  4:20 |   6.9 |
 | COMPLETED Detect knitter and disable code generation accordingly            |         |       |  1:15 |   2.0 |
-| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   8.5 |
-| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.2 |
+| COMPLETED Clean up kernel and backend confusion                             |         |       |  5:17 |   8.4 |
+| COMPLETED Add a "language" directory for each backend                       |         |       |  5:44 |   9.1 |
 | COMPLETED Split C++ profiles and templates from C#                          |         |       |  1:11 |   1.9 |
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.5 |
-| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.2 |
+| COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.1 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.6 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  27.4 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  27.2 |
 | COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.1 |
-| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.8 |
+| COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.7 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
-| COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.9 |
+| COMPLETED Add facet directories to locator                                  |         |       |  1:09 |   1.8 |
 | COMPLETED Split json and dia tests                                          |         |       |  0:12 |   0.3 |
-| COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.8 |
+| COMPLETED Split the "built-ins" by language                                 |         |       |  0:28 |   0.7 |
 | COMPLETED Models should have an associated language                         |         |       |  2:57 |   4.7 |
-| COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.8 |
+| COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.7 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
 | COMPLETED Add types with no properties and one property                     |         |       |  0:05 |   0.1 |
+| STARTED Fix clang borked build                                              |         |       |  0:10 |   0.3 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.7 |
 | STARTED Add support for Equals in C#                                        |         |       |  1:30 |   2.4 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.0 |
@@ -53,6 +54,7 @@
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2016-12-10 Sat 20:31]--[2016-12-10 Sat 20:55] =>  0:24
     CLOCK: [2016-12-08 Thu 11:31]--[2016-12-08 Thu 11:34] =>  0:03
     CLOCK: [2016-12-08 Thu 11:00]--[2016-12-08 Thu 11:30] =>  0:30
     CLOCK: [2016-12-02 Fri 09:01]--[2016-12-02 Fri 09:09] =>  0:08
@@ -532,6 +534,11 @@ means we need to completely segregate models by language, as per story
 [[https://github.com/DomainDrivenConsulting/dogen/blob/master/doc/agile/sprint_backlog_93.org#models-should-have-an-associated-language][Models should have an associated language]]. We need to implement this
 first.
 
+Links:
+
+- [[https://msdn.microsoft.com/en-us/library/ms228360(v%3Dvs.90).aspx][Data Types (C# vs. Java)]]
+-
+
 *** COMPLETED Models should have an associated language                :epic:
     CLOSED: [2016-12-10 Sat 10:41]
     CLOCK: [2016-12-10 Sat 10:04]--[2016-12-10 Sat 10:41] =>  0:37
@@ -611,11 +618,22 @@ In order to make sure we're not hard-coding for the multiple
 properties scenario, create simple classes with no properties and one
 property.
 
+*** STARTED Fix clang borked build                                    :story:
+    CLOCK: [2016-12-10 Sat 20:20]--[2016-12-10 Sat 20:30] =>  0:10
+
+We seem to have generated some diffs with clang.
+
 *** STARTED Add support for test data generation in C#                :story:
     CLOCK: [2016-12-10 Sat 15:30]--[2016-12-10 Sat 16:33] =>  1:03
 
 We need to create a facet that generates domain types. It should be
 idiomatic in C# - =IEnumerable=, etc.
+
+Links:
+
+- [[http://geekswithblogs.net/BlackRabbitCoder/archive/2010/04/21/more-fun-with-c-iterators-and-generators.aspx][More Fun with C# Iterators and Generators]]
+- [[https://gist.github.com/DForshner/5533088][NaiveFibonacciSequenceGenerator.cs]]
+- [[https://coding.abel.nu/2011/12/return-ienumerable-with-yield-return/][Return IEnumerable with yield return]]
 
 *** STARTED Add support for Equals in C#                              :story:
     CLOCK: [2016-12-10 Sat 17:57]--[2016-12-10 Sat 18:11] =>  0:14
@@ -627,6 +645,7 @@ Links:
 
 - [[http://www.loganfranken.com/blog/687/overriding-equals-in-c-part-1/][Overriding Equals in C# (Part 1)]]
 - [[http://www.loganfranken.com/blog/692/overriding-equals-in-c-part-2/][Overriding Equals in C# (Part 2)]]
+- [[http://www.loganfranken.com/blog/698/overriding-equals-in-c-part-3/][Overriding Equals in C# (Part 3)]]
 
 Problems with GetHashCode:
 
@@ -762,6 +781,12 @@ We need to be able to mark yarn attributes as:
 - private
 - protected
 
+*** Add final support in C#                                           :story:
+
+Links:
+
+- [[https://msdn.microsoft.com/en-us/library/88c54tsw.aspx][sealed (C# Reference)]]
+
 *** Add aspects for C# serialisation support                          :story:
 
 We need to add serialisation support:
@@ -777,6 +802,13 @@ facets. We will need a lot of configuration knobs though:
   element level.
 - support for serialisation specific arguments such as parameters for
   Json.Net.
+
+Links:
+
+- [[https://msdn.microsoft.com/en-us/library/ms731923(v%3Dvs.110).aspx][Types Supported by the Data Contract Serializer]]
+- [[https://msdn.microsoft.com/en-us/library/ms731073(v%3Dvs.110).aspx][Serialization and Deserialization]]
+- [[https://msdn.microsoft.com/en-us/library/ms733127(v%3Dvs.110).aspx][Using Data Contracts]]
+- [[https://msdn.microsoft.com/en-us/library/ms731923(v%3Dvs.110).aspx][Types Supported by the Data Contract Serializer]]
 
 *** Clean up comment formatter                                        :story:
 
@@ -917,6 +949,11 @@ Tasks:
   that, given a model in say C#, we could reconstruct a yarn lam model
   (or tell the user about the list of failures to map). This should be
   logged as a separate story.
+
+Links:
+
+- [[http://stackoverflow.com/questions/741054/mapping-between-stl-c-and-c-sharp-containers][Mapping between stl C++ and C# containers]]
+- [[http://stackoverflow.com/questions/3659044/comparison-of-c-stl-collections-and-c-sharp-collections][Comparison of C++ STL collections and C# collections?]]
 
 *** Add C++-03 mode                                                    :epic:
 
