--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-10 Sat 20:55]
+#+CAPTION: Clock summary at [2016-12-10 Sat 21:49]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *62:42* |       |       | 100.0 |
+| *Total time*                                                                | *62:49* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 62:42   |       |       | 100.0 |
-| Active                                                                      |         | 62:42 |       | 100.0 |
+| Stories                                                                     | 62:49   |       |       | 100.0 |
+| Active                                                                      |         | 62:49 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:48 |   4.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:02 |   1.6 |
 | COMPLETED Update readme                                                     |         |       |  0:11 |   0.3 |
@@ -34,7 +34,7 @@
 | COMPLETED Formatter registrar validation is not being called                |         |       |  0:20 |   0.5 |
 | COMPLETED Move decoration repository to quilt                               |         |       |  0:43 |   1.1 |
 | COMPLETED Move module id container into yarn                                |         |       |  0:24 |   0.6 |
-| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  27.2 |
+| COMPLETED Add basic infrastructure for C#                                   |         |       | 17:02 |  27.1 |
 | COMPLETED Add support for C#-style documentation                            |         |       |  1:57 |   3.1 |
 | COMPLETED Add support for visual studio projects and solutions              |         |       |  6:05 |   9.7 |
 | COMPLETED OSX build is borked                                               |         |       |  0:21 |   0.6 |
@@ -45,11 +45,11 @@
 | COMPLETED Add support for properties in C#                                  |         |       |  2:20 |   3.7 |
 | POSTPONED Use an unordered map in qualified name                            |         |       |  0:10 |   0.3 |
 | COMPLETED Add types with no properties and one property                     |         |       |  0:05 |   0.1 |
-| STARTED Fix clang borked build                                              |         |       |  0:10 |   0.3 |
+| STARTED Ensure a stable sort of project items                               |         |       |  0:17 |   0.5 |
 | STARTED Add support for test data generation in C#                          |         |       |  1:03 |   1.7 |
 | STARTED Add support for Equals in C#                                        |         |       |  1:30 |   2.4 |
 | STARTED Language namespaces and modeling element locations                  |         |       |  0:39 |   1.0 |
-| STARTED Add support for Decimal numbers in c++                              |         |       |  0:32 |   0.9 |
+| STARTED Add support for Decimal numbers in c++                              |         |       |  0:32 |   0.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -618,10 +618,25 @@ In order to make sure we're not hard-coding for the multiple
 properties scenario, create simple classes with no properties and one
 property.
 
-*** STARTED Fix clang borked build                                    :story:
+*** STARTED Ensure a stable sort of project items                     :story:
+    CLOCK: [2016-12-10 Sat 21:41]--[2016-12-10 Sat 21:48] =>  0:07
     CLOCK: [2016-12-10 Sat 20:20]--[2016-12-10 Sat 20:30] =>  0:10
 
-We seem to have generated some diffs with clang.
+We seem to have generated some diffs with clang. The problem is order
+in the project:
+
+: -    <Compile Include="Types/AllBuiltins.cs" />
+: -    <Compile Include="SequenceGenerators/AllBuiltinsSequenceGenerator.cs" />
+: -    <Compile Include="Types/OneProperty.cs" />
+: -    <Compile Include="SequenceGenerators/OnePropertySequenceGenerator.cs" />
+:     <Compile Include="Types/NoProperties.cs" />
+:     <Compile Include="SequenceGenerators/NoPropertiesSequenceGenerator.cs" />
+: +    <Compile Include="Types/OneProperty.cs" />
+: +    <Compile Include="SequenceGenerators/OnePropertySequenceGenerator.cs" />
+: +    <Compile Include="Types/AllBuiltins.cs" />
+: +    <Compile Include="SequenceGenerators/AllBuiltinsSequenceGenerator.cs" />
+
+We need to sort the project items before we create the project.
 
 *** STARTED Add support for test data generation in C#                :story:
     CLOCK: [2016-12-10 Sat 15:30]--[2016-12-10 Sat 16:33] =>  1:03
